--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/iconBullet.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/iconBullet.html
@@ -8,6 +8,6 @@
 </style>
 
 <div ng-controller="iconBulletController" class="block-bullet-icon d-inline-block fs-lg py-1 {{ className }}">
-    <span aria-hidden="true" class="block-bullet-icon__icon fa-regular fa-{{ block.data.icon }}"></span>
+    <span aria-hidden="true" class="block-bullet-icon__icon fas {{ block.data.icon }}"></span>
     {{ block.data.text }}
 </div>
