--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/richText.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/richText.html
@@ -1,3 +1,3 @@
 ﻿<div ng-controller="richTextController" class="rich-text {{className}}" style="{{style}}">
-    <div ng-click="block.edit()" ng-bind-html="block.data.text | safe_html"></div>
+    <div ng-bind-html="richTextHtml | safe_html"></div>
 </div>
