--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/pageHeader.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/pageHeader.html
@@ -1,6 +1,6 @@
 ﻿<header ng-controller="pageHeaderController" class="page-header {{ block.data.hideAccent == 1 ? 'page-header--no-accent' : '' }}">
     <div class="container">
-        <div class="container--sm">
+        <div class="container--sm pe-9 pe-md-0">
             <h1 class="mb-0">{{ block.data.heading ? block.data.heading : parentPage.variants[0].name }}</h1>
             <p ng-if="block.data.subheading" class="subhead mt-3">{{ block.data.subheading }}</p>
         </div>
