--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/multimediaCenter.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/multimediaCenter.html
@@ -1,5 +1,5 @@
 ﻿<div ng-controller="multimediaCenterController" class="container">
-    <div class="row align-items-center">
+    <div class="row align-items-center mb-4">
         <div class="col-12 col-sm-6">
             <h2 class="mb-0">{{ block.data.heading }}</h2>
         </div>
