--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/genericSection.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/genericSection.html
@@ -1,8 +1,5 @@
-
 <div ng-controller="genericSectionController" class="{{className}}" style="{{style}}">
-    <div class="container">
-        <div class="row">
-            <slot name="generic-section-area" part="generic-section-area" class="col-12 block-col area-zone"></slot>
-        </div>
+    <div class="row m-0">
+        <slot name="generic-section-area" part="generic-section-area" class="col-12 my-0 block-col area-zone"></slot>
     </div>
 </div>
