--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/spacer.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/spacer.html
@@ -1,1 +1,3 @@
-﻿<div ng-controller="spacerController" style="{{style}}"></div>
+﻿<div ng-controller="spacerController" class="area-zone d-flex align-items-center justify-content-center m-0 text-uppercase fw-bold" style="{{style}} color: #c8c8c880;" ng-click="block.edit()">
+    Spacer
+</div>
