--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/membershipSection.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/membershipSection.html
@@ -9,14 +9,14 @@
         <div class="container position-relative" style="z-index: 1;">
             <div class="row g-0">
                 <div class="col-lg-7 m-0 col-xl-6 me-auto text-white">
-                    <div class="py-5 pt-lg-12 pb-lg-10">
-                        <p class="overline mb-5" style="color:#FFF">
+                    <div class="py-5 pt-lg-12 pb-lg-10" style="color: white;">
+                        <p class="overline mb-5">
                             {{ block.data.overline }}
                         </p>
-                        <h2 class="mb-5 display-1" style="color:#FFF">
+                        <h2 class="mb-5 display-1">
                             {{ block.data.headline }}
                         </h2>
-                        <div class="rich-text text-white mb-5 fs-xl font-family-2" style="color:#FFF">
+                        <div class="rich-text text-white mb-5 fs-xl font-family-2">
                             {{ block.data.content }}
                         </div>
                         <slot name="membership-area" part="membership-area" class="col-12 block-col area-zone"></slot>
