--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/ctaCard.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/ctaCard.html
@@ -9,6 +9,6 @@
 <div ng-controller="ctaCardController" class="block-cta-card card align-items-center text-center">
     <p class="overline">{{ block.data.overline }}</p>
     <h2 class="card__headline card__headline--hairline">{{ block.data.headline }}</h2>
-    <div class="rich-text" ng-bind-html="block.data.content | safe_html"></div>
+    <div class="rich-text" ng-bind-html="block.data.content.markup | safe_html"></div>
     <slot name="area-buttons" part="area-buttons" class="block-col area-zone"></slot>
 </div>
