--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/legalUpdateLibrary.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/legalUpdateLibrary.html
@@ -1,6 +1,6 @@
-﻿<div ng-controller="hotTipLibraryController" class="screenshot-block">
+﻿<div ng-controller="legalUpdateLibraryController" class="screenshot-block">
     <div class="container">
-        <img src="../../App_Plugins/CustomBlockView/hot-tip-library-screenshot.png" />
+        <img src="../../App_Plugins/CustomBlockView/legal-update-library-screenshot.png" />
         <div class="screenshot-block-overlay"></div>
         <div class="screenshot-block-label">Example Screenshot</div>
     </div>
