Deployment 0969b513-16af-4421-8de3-29e656ea73d5: Run number 1063

--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/calendar.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/calendar.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="calendarController" class="screenshot-block">
+﻿<div class="screenshot-block">
     <img src="../../App_Plugins/CustomBlockView/calendar-screenshot.png" />
     <div class="screenshot-block-overlay"></div>
     <div class="screenshot-block-label">Example Screenshot</div>
