--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/hotTip.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/hotTip.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="hotTipController" class="hot-tip">
+﻿<div class="hot-tip">
     <div class="hot-tip__header">
         {{ block.data.title }}
     </div>
