--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/hotTipLibrary.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/hotTipLibrary.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="hotTipLibraryController" class="screenshot-block">
+﻿<div class="screenshot-block">
     <div class="container">
         <img src="../../App_Plugins/CustomBlockView/hot-tip-library-screenshot.png" />
         <div class="screenshot-block-overlay"></div>
