--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/membershipSection.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/membershipSection.html
@@ -4,7 +4,7 @@
     }
 </style>
 
-<div ng-controller="membershipSectionController" class="block-home-membership-section">
+<div class="block-home-membership-section">
     <div class="block-home-membership-section__top">
         <div class="container position-relative" style="z-index: 1;">
             <div class="row g-0">
