--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/tabs.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/tabs.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="tabsController" class="py-9 py-lg-11" style="{{ block.data.enableDarkMode == 1 ? 'background-color: #1d4674; color: white;' : '' }}">
+﻿<div class="py-9 py-lg-11" style="{{ block.data.enableDarkMode == 1 ? 'background-color: #1d4674; color: white;' : '' }}">
     <div class="container">
         <div class="text-center">
             <div ng-if="block.data.overline">
