--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/adWidget.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/adWidget.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="adWidgetController" class="screenshot-block my-9">
+﻿<div class="screenshot-block my-9">
     <img src="../../App_Plugins/CustomBlockView/ad-widget-screenshot.png" />
     <div class="screenshot-block-overlay"></div>
     <div class="screenshot-block-label">Example Screenshot</div>
