--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/ctaQuickLinks.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/ctaQuickLinks.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="ctaQuickLinksController" class="px-4 py-9 py-md-11">
+﻿<div class="px-4 py-9 py-md-11">
     <div class="cta-quick-links container px-5 pt-7 p-md-9">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-7 mt-0">
