--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/legalUpdateLibrary.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/legalUpdateLibrary.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="legalUpdateLibraryController" class="screenshot-block">
+﻿<div class="screenshot-block">
     <div class="container">
         <img src="../../App_Plugins/CustomBlockView/legal-update-library-screenshot.png" />
         <div class="screenshot-block-overlay"></div>
