--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/membershipWidget.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/membershipWidget.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="membershipWidgetController" class="screenshot-block">
+﻿<div class="screenshot-block">
     <img src="../../App_Plugins/CustomBlockView/membership-widget-screenshot.png" />
     <div class="screenshot-block-overlay"></div>
     <div class="screenshot-block-label">Example Screenshot</div>
