--- a/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/youtubeEmbed.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/CustomBlockView/youtubeEmbed.html
@@ -1,3 +1,3 @@
-﻿<div ng-controller="youtubeEmbedController" class="ratio ratio-16x9">
+﻿<div class="ratio ratio-16x9">
     <iframe src="https://www.youtube.com/embed/{{ block.data.videoID }}" title="YouTube video" allowfullscreen></iframe>
 </div>
